# argos3_ros_bridge

./: CMakeLists.txt  README.md  package.xml
collective-decision-making-argos-ros2/: CMakeLists.txt  package.xml
collective-decision-making-argos-ros2/argos_worlds/: demo.argos
collective-decision-making-argos-ros2/plugins/argos_ros2_foot_bot/: CMakeLists.txt  argos_ros_footbot.cpp  argos_ros_footbot.h
collective-decision-making-argos-ros2/plugins/argos_ros2_foot_bot/log/: latest_list
collective-decision-making-controller/launch/: world.argos
collective-decision-making-controller/src/: control.cpp  control.h
include/: argos_ros_footbot.h  bridge_loop_function.h
log/: latest_list
src/: argos_ros_footbot.cpp  bridge_loop_function.cpp
